# depsched

./: .gitignore  README.md  pyproject.toml
examples/: pipeline.yaml  timed_pipeline.yaml
src/depsched/: __init__.py  cli.py  config.py  engine.py  graph.py  state.py  timing.py
tests/: test_critical_path.py  test_engine.py  test_timing.py
