[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "depsched"
version = "0.1.0"
description = "A dependency-aware task runner with incremental rebuilds (make/CI-lite)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
depsched = "depsched.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
